# AlgorithmPractice

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
src/: CMakeLists.txt  cache.cpp  cache.h  delete_elements_till.cpp  delete_elements_till.h  pch.h
tests/: CMakeLists.txt  UnitTests.cpp  pch.h
tmp/: main.cpp  tmp.vcxproj  tmp.vcxproj.filters
